# unusual_prompt

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
test/: test_validator.py
tests/: test_validator.py
validator/: __init__.py  main.py
